--- a/channel_app_template/requirements.txt
+++ b/channel_app_template/requirements.txt
@@ -1,8 +1,9 @@
 
-requests==2.31.0
+requests==2.32.2
 celery==5.3.6
 sentry_sdk==1.14.0
 flower==2.0.0
 omnisdk==0.0.99
 channel_app==0.0.150
 redis==5.0.1
+urllib3>=2.2.2 # not directly required, pinned by Snyk to avoid a vulnerability
